--- a/newsFeeds/news.html
+++ b/newsFeeds/news.html
@@ -8,13 +8,10 @@
     <meta name="mobile-web-app-capable" content="yes">
 	<!-- pirate cat win -->
 	<link rel="icon" type="image/gif" href="http://i.giphy.com/3oEduVGyuRGuZXaqys.gif">
-	
-    <!-- https://cdnjs.com/libraries/semantic-ui -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    <!-- https://cdnjs.com/libraries/semantic-ui css here-->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/components/form.min.css" rel="stylesheet" type="text/css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css" rel="stylesheet" type="text/css">
-
-	
-	
 	<!-- rss feed basics -->
 	<!-- google feeds script source:  http://www.developerdrive.com/2012/03/a-simple-way-to-add-free-news-content-to-your-website/-->
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -132,8 +129,7 @@
 	
 	
 	
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    <!-- put semantic js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js"></script>
 	<script src ="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/components/form.min.js"></script>
 </body>
@@ -209,22 +205,5 @@ $("#loginForm")
 
 
 </script>
-
-
-
-<!-- Paste this code into an external JavaScript file named: lastVisit.js  -->
-
-
-
-
-<!-- Paste this code into the HEAD section of your HTML document.
-     You may need to change the path of the file.  -->
-
-
-
-
-<!-- Paste this code into the BODY section of your HTML document  -->
-
-
 
 
